--- a/templates/list.html
+++ b/templates/list.html
@@ -1,20 +1,22 @@
 <!doctype html>
 <html>
    <body>
-   
+
       <table border = 1>
          <thead>
+            <td>Id</td>
             <td>Title</td>
             <td>Description</td>
          </thead>
-         
+
          {% for row in rows %}
             <tr>
+               <td>{{row["id"]}}</td>
                <td>{{row["title"]}}</td>
                <td>{{row["text"]}}</td>
             </tr>
          {% endfor %}
       </table>
-      
+
    </body>
 </html>
