--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <title>Hello from Flask</title>
-{% if query %}
-  <h1>Hello {{ query }}!</h1>
+{% if response %}
+  <h1>Hello {{ response }}!</h1>
 {% else %}
   <h1>Hello, World!</h1>
 {% endif %}
